<resources>
    <string name="app_name">a1.7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="all_inboxes">All inboxes</string>
    <string name="inbox">inbox</string>
    <string name="shoozed">shoozed</string>
    <string name="done">done</string>
    <string name="drafts">drafts</string>
    <string name="send">send</string>
    <string name="reminders">reminders</string>
    <string name="settings">settings</string>
    <string name="h_f">h_f</string>
    <string name="help_amp_feedback"><![CDATA[help & feedback]]></string>
</resources>